--- a/Culinova/client/package.json
+++ b/Culinova/client/package.json
@@ -28,5 +28,8 @@
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
     "vite": "^7.0.4"
+  },
+  "optionalDependencies": {
+    "@rollup/rollup-darwin-arm64": "^4.46.2"
   }
 }
